# iamf-web-studio

./: .gitignore  README.md  index.html
cpp/: CMakeLists.txt  ObrWrapper.cpp  ObrWrapper.h
public/wasm/: obr_module.js
src/: main.js  style.css
src/audio/: AudioManager.js  WasmBridge.js
src/ui/: DOMController.js  Visualizer3D.js
